--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "onerp-electronapp",
+  "productName": "ONERP",
   "version": "1.0.0",
   "description": "Hardware",
   "main": "src/main.js",
@@ -10,12 +11,67 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "electron-pos-printer": "^1.2.0",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "electron": "^9.1.0"
+    "@electron-forge/cli": "^6.0.0-beta.67",
+    "@electron-forge/maker-deb": "^6.0.0-beta.67",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.67",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.67",
+    "@electron-forge/maker-zip": "^6.0.0-beta.67",
+    "electron": "^9.1.0",
+    "electron-builder": "^23.6.0"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "build-installer": "electron-builder"
+  },
+  "build": {
+    "appId": "ONERP",
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "src/favicon.ico",
+      "requestedExecutionLevel": "requireAdministrator"
+    },
+    "nsis": {
+      "installerIcon": "src/favicon.ico",
+      "uninstallerIcon": "src/favicon.ico",
+      "uninstallDisplayName": "ONERP",
+      "license": "license.txt",
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "onerp_electronapp"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
